[gd_scene load_steps=2 format=3 uid="uid://c6ga862t4hde5"]

[ext_resource type="Script" uid="uid://d2jsctbdnmps8" path="res://debug_tools/performance_monitor.gd" id="1_cxoop"]

[node name="PerformanceMonitor" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_cxoop")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -179.0
offset_bottom = 77.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="FPSCounter" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Performance = XXX FPS"

[node name="DrawCalls" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Draw calls : "

[node name="VRAMUsage" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "VRAM Used : "

[node name="FOW_Update" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "FOW update time = "

[node name="FOW_vis" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "FOW visibility update = "
